# mbuffer

./: .Makefile.in.swp  .hg_archival.txt  .hgtags  .mbuffer.c.swp  AUTHORS  CHANGES  ChangeLog  Makefile  Makefile.am  Makefile.in  README  acconfig.h  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  dest.h  log.c  log.h  mbuffer  mbuffer.1  mbuffer.1.in  mbuffer.c  mkinstalldirs  network.c  network.h
po/: ChangeLog  POTFILES.in  de.gmo  de.po  mbuffer.pot
