AC_INIT(mbuffer.c)
AC_CONFIG_HEADER(config.h)

AC_CANONICAL_SYSTEM

PACKAGE=mbuffer
VERSION=20060126

AC_PREFIX_DEFAULT(/usr/local)
test "$prefix" = NONE && prefix=/usr/local
test "$exec_prefix" = NONE && exec_prefix=$prefix


AC_LANG_C
AC_PROG_CC
AC_PROG_INSTALL

AC_PATH_PROG(RM,rm)
AC_PATH_PROG(STRIP,strip)
AC_PATH_PROG(LN,ln)

AC_CHECK_LIB(pthread,pthread_attr_init,,AC_MSG_ERROR(you need the pthread library!))
AC_SEARCH_LIBS(sem_init,rt posix,,AC_MSG_ERROR(could not find semaphore functions!))
AC_PATH_PROG(MT,mt,AC_MSG_WARN(could not find the program mt - you might need this if you want autoloader support))

if test -n "$GCC"; then
        CFLAGS="$CFLAGS -Wall"
        case `uname -m` in
                i586)
                CFLAGS="$CFLAGS -march=pentium"
                ;;
                i686)
                CFLAGS="$CFLAGS -march=pentiumpro"
                ;;
		x86_64)
		CFLAGS="$CFLAGS -march=opteron -m64"
		;;
		sun4u)
		CFLAGS="$CFLAGS -mv8plus -m64"
		;;
        esac
fi

AC_TYPE_SIGNAL
AC_FUNC_MMAP
AC_HEADER_TIME
AC_HEADER_STDC
AC_CHECK_FUNCS(strerror memcpy)
AC_CHECK_HEADERS(unistd.h memory.h)
AC_STRUCT_ST_BLKSIZE
AC_SEARCH_LIBS(socket,socket,,AC_MSG_ERROR(could not find the library containing network functions!))
AC_SEARCH_LIBS(gethostbyname,nsl,,AC_MSG_ERROR(could not find the library containing name convertion functions!))
AC_SEARCH_LIBS(hstrerror,resolv,,AC_MSG_ERROR(could not find the library containing hstrerror))
AC_SEARCH_LIBS(sendfile,sendfile,AC_DEFINE(HAVE_SENDFILE,1,libsendfile is available),AC_MSG_WARN(could not find sendfile support))


AC_ARG_ENABLE(debug,
        --disable-debug           disable verbose logging to console for debugging purpose,
        ,enable_debug=yes
        )
if test x$enable_debug = xyes ; then
	AC_DEFINE_UNQUOTED(DEBUG)
fi

AC_ARG_ENABLE(md5,
        --disable-md5             disable md5 hash generation,
	,enable_md5=auto
	)
if test x$enable_md5 != xno ; then
	AC_SEARCH_LIBS(MD5_Init,ssl,AC_DEFINE_UNQUOTED(HAVE_LIBSSL),
		AC_SEARCH_LIBS(mhash_init,mhash,AC_DEFINE_UNQUOTED(HAVE_LIBMHASH),
			AC_SEARCH_LIBS(MD5Init,md5,AC_DEFINE_UNQUOTED(HAVE_LIBMD5),
			if test x$enable_md5 = xauto ; then
				AC_MSG_WARN(could not find the mhash library containing the md5 hash functions - md5 support disabled)
			else
				AC_MSG_ERROR(could not find the mhash library)
			fi
	)))
fi

AC_SUBST(DEBUG)
AC_DEFINE_UNQUOTED(PACKAGE,"${PACKAGE}")
AC_DEFINE_UNQUOTED(VERSION,"${VERSION}")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(AUTOCONF)
AC_DEFINE(_REENTRANT,1,Needed for thread safe compilation)

AC_OUTPUT(Makefile mbuffer.1)
